data/Java/18-missing-return-value/2/[M]Error.txt
https://stackoverflow.com/questions/19525594/java-missing-return-statement
stringstuff.java:11: error: incompatible types: missing return value
        return;
        ^